# packaged-s4

./: README.md  pyproject.toml
s4/: example.py  generate.py  train.py
s4/extensions/kernels/: test_vandermonde.py
s4/models/s4/: s4d.py
s4/src/callbacks/: progressive_resizing.py
s4/src/dataloaders/: audio.py  base.py  basic.py  et.py  lm.py  lra.py  synthetic.py  ts.py  vision.py
s4/src/dataloaders/datasets/: copying.py  delay.py  reconstruct.py
s4/src/dataloaders/utils/: vocabulary.py
s4/src/models/baselines/: convnext_timm.py  gru.py  lipschitzrnn.py  lstm.py  samplernn.py  transformer.py  unicornn.py  vit.py  vit_all.py  wavenet.py
s4/src/models/baselines/nonaka/: inception.py  resnet.py  xresnet.py
s4/src/models/functional/: krylov.py  unroll.py
s4/src/models/hippo/: transition.py  visualizations.py
s4/src/models/nn/: adaptive_softmax.py  linear.py
s4/src/models/nn/exprnn/: orthogonal.py
s4/src/models/sequence/attention/: linear.py  mha.py
s4/src/models/sequence/backbones/: block.py  model.py  sashimi.py  unet.py
s4/src/models/sequence/convs/: conv1d.py  conv2d.py
s4/src/models/sequence/kernels/: dplr.py  fftconv.py  kernel.py  ssm.py
s4/src/models/sequence/modules/: ffn.py  lssl.py  megablock.py  pool.py  s4block.py  s4nd.py
s4/src/models/sequence/rnns/: qrnn.py  rnn.py  sru.py
s4/src/models/sequence/rnns/cells/: basic.py  hippo.py  memory.py  minimalrnn.py  timestamp.py
s4/src/tasks/: decoders.py  encoders.py  tasks.py
s4/src/utils/: train.py
