[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "s4"
description = "Open Assistant Model Training Module"
version = "1.0.0"
authors = [
    { name = "Hazy Research"}
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "rich",
    "torchtext",
    "lit", # Getting installation errors with torch 2.0 if this isn't installed
    # torchvision
    "pytorch-lightning>=1.9.3",
    "hydra-core",
    "omegaconf",
    "wandb",
    "einops",
    "cmake", # For pykeops support
    # pykeops # Seems to cause various issues; leaving uninstalled by default
    "transformers", # For some schedulers

    # Model specific packges
    # pytorch-fast-transformers # for Performer

    # Dataset specific packages
    "datasets", # LRA
    "sktime", # BIDMC
    "scikit-learn", # Impedance
    "numba", # Impedance
    "gluonts", # Monash
    "timm>=0.5.4", # ImageNet
]

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.setuptools]
py-modules = ["model_training"]

[tool.black]
line-length = 120
target-version = ['py310']